# auto-cheminstruct

./: .env.example  .gitignore  .pre-commit-config.yaml  .zenodo.json  Dockerfile  README.md  build_presentation.py  docker-compose.yml  memory.md  presentation.md  presentation_clean.md  pyproject.toml  requirements.txt  run_scale.sh  speech.md  tasks.md
auto-cheminstruct-main/: README.md
auto-cheminstruct-main/auto_cheminstruct/: .env.example  main.py  reflection_agent.py  validator.py
auto_cheminstruct/: README.md  config.py  dataset_builder.py  molecule_loader.py  pyproject.toml  route_generator.py  sanitizer.py  visualizer.py
configs/: default.yaml
configs/hydra/: config.yaml
configs/hydra/carl/: reflection.yaml
configs/hydra/evolution/: map_elites.yaml
configs/hydra/islands/: default.yaml
configs/hydra/llm/: fireworks.yaml
configs/hydra/pipeline/: default.yaml
docs/: architecture.md  configuration.md  gigaevo-integration-blueprint.md  gigaevo-integration-plan.md  maestro-gigachain-gigaevo-research.md
docs/research/: aizynthfinder.md  chemcrow_itmo.md  chemcrow_public.md  gigaevo_architecture.md  gigaevo_config.md  gigaevo_dag.md  gigaevo_dag_system.md  gigaevo_evolution.md  gigaevo_github.md  gigaevo_heilbron.md  gigaevo_paper.md  gigaevo_paper_html.md  gigaevo_quickstart.md  gigaevo_toy_problem.md  gigaevo_usage.md  langchain_gigachat.md  langchain_gigachat_examples.md  langchain_gigachat_readme.md  maestro_api.md  maestro_core.md  maestro_cover.md  maestro_en.md  maestro_instruction.md  scientific_agent_skills_repo.md  scientific_agent_skills_tree.md  service--chat-manager-examples_README.md
hf_dataset/: README.md
paper/: main.tex  references.bib
problems/: __init__.py
problems/autochem/: __init__.py  metrics.yaml  task_description.txt  validate.py
scripts/: generate_v2.py
src/: __init__.py  config.py  exceptions.py  logger.py
src/agents/: compilation_agent.py  hypothesis_agent.py  reflection_agent.py  verification_agent.py
src/benchmarks/: __init__.py  ablation.py  chemcot_comparison.py  evolution_ablation.py
src/carl/: __init__.py  chain.py
src/chemistry/: diversity.py  rdkit_wrapper.py  xtb_interface.py
src/cli/: main.py
src/compilation/: __init__.py  quality.py
src/data/: models.py
src/evolution/: __init__.py  dag.py  map_elites.py  redis_store.py  stages.py
src/pipeline/: orchestrator.py
src/rag/: chemical_rag.py
src/utils/: llm_factory.py  temperature_scheduler.py
tests/: conftest.py  test_agents.py  test_carl.py  test_chemistry.py  test_config.py  test_dag.py  test_evolution_ablation.py  test_feasibility.py  test_integration.py  test_map_elites.py  test_models.py  test_quality.py  test_rag.py  test_redis_store.py  test_temperature.py
(+5 files in other folders)
