[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-cheminstruct"
version = "0.1.0"
description = "Agent-Driven Synthesization of RLHF Data for Domain-Specific Language Models in Chemistry"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Auto-ChemInstruct Team"}
]
keywords = ["cheminformatics", "rlhf", "llm", "multi-agent", "rdkit", "scientific-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.5.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pandas>=2.1.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "openai>=1.50.0",
    "tiktoken>=0.7.0",
    "loguru>=0.7.0",
    "omegaconf>=2.3.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "datasets>=2.20.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "networkx>=3.6.1",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
chemistry = [
    "rdkit>=2024.03.0",
    "pubchempy>=1.0.4",
    "selfies>=2.1.1",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
]
viz = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "py3Dmol>=2.1.0",
]

[project.scripts]
auto-chem = "src.cli.main:app"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
